# ducknukem

./: Cargo.toml  README.md
assets/: 3dmovementtest.glb
src/: lib.rs  main.rs  map.rs  player.rs
src/physics/: controller.rs  mod.rs
